# iot-sms

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  log_redaction.c  log_redaction.h  main.c  mqtt_manager.c  mqtt_manager.h  remote_log.c  remote_log.h  sms_processor.c  sms_processor.h  sms_storage.c  sms_storage.h  sntp_manager.c  sntp_manager.h  uart_at_manager.c  uart_at_manager.h  uart_dtu_manager.c  uart_dtu_manager.h  wifi_manager.c  wifi_manager.h
