idf_component_register(SRCS "sms_storage.c" "main.c"
                           "log_redaction.c"
                           "wifi_manager.c"
                           "uart_at_manager.c"
                           "uart_dtu_manager.c"
                           "mqtt_manager.c"
                           "sms_processor.c"
                           "sntp_manager.c"
                           "remote_log.c"
                    INCLUDE_DIRS "."
                    PRIV_REQUIRES "esp_wifi" "esp_event" "nvs_flash" "esp_netif" "mqtt" "driver" "esp_ringbuf")
